--- a/frontend/GroupProject/index.css
+++ b/frontend/GroupProject/index.css
@@ -1,23 +1,20 @@
-.container{
-    padding-top: 10%;
-    width: 60%; height: 60%;
+body {
+    background-image:url("./project-photo-2.avif") ;
+    background-size: cover;
+    height: 100%;
+    margin: 0%;
     display: flex;
-    justify-content: space-evenly;
-    align-content: center;
-
-}
-
- header{
-    top: 0; left: 0; right: 0;
-    background: antiquewhite ;
-    color:#F9577E;
-    padding: 1rem;
-    display: flex;
+    justify-content: center;
     align-items: center;
-    justify-content: space-between;
+    margin-top: 100px;
 }
+
+.frontPage{
+    text-align: center;
+}
+
 *{
-    margin: 0; padding: 0;
+    padding: 0;
     box-sizing: border-box;
     font-family: 'papyrus';
     outline: none; border: none;
@@ -25,47 +22,36 @@
     text-transform: capitalize;
     transition: 2s linear;
 }
+
+header{
+    position: fixed;
+    top: 0; left: 0; right: 0;
+    background:antiquewhite;
+    color:#F9577E;
+    padding: 1rem;
+    justify-content: space-between;
+    align-items: center;
+    display: flex;
+}
+
 a{
     color:#F9577E;
 }
+
+.about{
+    color: antiquewhite;
+    text-align: center;
+    border: #F9577E;
+    border-width: 10px;
+    border-style: solid;
+    background-color: #F9577E;
+    line-height: 2em;
+    width: 50%;
+    margin-top: 20;
+}
+
 .navbar{
     width: 50%;
     display: flex;
     justify-content: space-evenly;
-}
-#imageContainer{
-    display: flex;
-    justify-content: space-evenly;
-}
-#imageContainer {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-.item {
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    padding: 10px;
-    margin: 10px;
-    width: 250px;
-    text-align: center;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-.item img {
-    width: 100%;
-    height: auto;
-    border-radius: 8px;
-}
-.item h2 {
-    font-size: 18px;
-    color: #333;
-}
-.item p {
-    font-size: 14px;
-    color: #555;
-}
-.item .price {
-    font-size: 16px;
-    color: #e91e63;
-    font-weight: bold;
 }
