--- a/frontend/GroupProject/bundles.css
+++ b/frontend/GroupProject/bundles.css
@@ -1,24 +1,19 @@
-/* .container{
+.container{
     padding-top: 10%;
     width: 60%; height: 60%;
     display: flex;
     justify-content: space-evenly;
     align-content: center;
-} */
-
-.frontPage{
-    text-align: center;
 }
 
  header{
-    position: fixed;
     top: 0; left: 0; right: 0;
-    background:antiquewhite;
+    background: antiquewhite ;
     color:#F9577E;
     padding: 1rem;
-    justify-content: space-between;
-    align-items: center;
     display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 *{
@@ -39,4 +34,47 @@ a{
     width: 50%;
     display: flex;
     justify-content: space-evenly;
+}
+
+#imageContainer{
+    display: flex;
+    justify-content: space-evenly;
+}
+
+#imageContainer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.item {
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 10px;
+    margin: 10px;
+    width: 250px;
+    text-align: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.item img {
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+}
+
+.item h2 {
+    font-size: 18px;
+    color: #333;
+}
+
+.item p {
+    font-size: 14px;
+    color: #555;
+}
+
+.item .price {
+    font-size: 16px;
+    color: #e91e63;
+    font-weight: bold;
 }
