--- a/frontend/GroupProject/candles.css
+++ b/frontend/GroupProject/candles.css
@@ -1,42 +1,36 @@
-/* .container{
-    padding-top: 10%;
-    width: 60%; height: 60%;
+#imageContainer{
     display: flex;
     justify-content: space-evenly;
-    align-content: center;
-} */
-
-.frontPage{
+}
+#imageContainer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.item {
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 10px;
+    margin: 10px;
+    width: 250px;
     text-align: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
-
- header{
-    position: fixed;
-    top: 0; left: 0; right: 0;
-    background:antiquewhite;
-    color:#F9577E;
-    padding: 1rem;
-    justify-content: space-between;
-    align-items: center;
-    display: flex;
+.item img {
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
 }
-
-*{
-    margin: 0; padding: 0;
-    box-sizing: border-box;
-    font-family: 'papyrus';
-    outline: none; border: none;
-    text-decoration: none;
-    text-transform: capitalize;
-    transition: 2s linear;
+.item h2 {
+    font-size: 18px;
+    color: #333;
 }
-
-a{
-    color:#F9577E;
+.item p {
+    font-size: 14px;
+    color: #555;
 }
-
-.navbar{
-    width: 50%;
-    display: flex;
-    justify-content: space-evenly;
+.item .price {
+    font-size: 16px;
+    color: #e91e63;
+    font-weight: bold;
 }
